# argos

./: .env.example  .gitignore  setup.cfg
images/: scrape_lilith.sh
lib/yolov3/: detect.py  export.py  hubconf.py  setup.cfg  train.py  val.py
lib/yolov3/src/yolov3/models/: common.py  experimental.py
notebooks/: 01_yolo.ipynb  02_data.ipynb
src/argos/: env.py  test.py
