# Project-wide configuration file, can be used for package metadata and other toll configurations
# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments

[metadata]
name = yolov3
license_file = LICENSE
description-file = README.md


[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --doctest-modules
    --durations=25
    --color=yes


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731  # Do not assign a lambda expression, use a def
    F405
    E402
    F841
    E741
    F821
    E722
    F401
    W504
    E127
    W504
    E231
    E501
    F403
    E302
    F541


[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 120
multi_line_output = 0

[options]
package_dir =
    = src
packages = find:
install_requires =
    # Base ----------------------------------------
    matplotlib>=3.2.2
    numpy>=1.18.5
    opencv-python>=4.1.2
    Pillow>=7.1.2
    PyYAML>=5.3.1
    requests>=2.23.0
    scipy>=1.4.1
    torch>=1.7.0
    torchvision>=0.8.1
    tqdm>=4.41.0

    # Logging -------------------------------------
    #tensorboard>=2.4.1
    #wandb

    # Plotting ------------------------------------
    pandas>=1.1.4
    seaborn>=0.11.0

    # Export --------------------------------------
    # coremltools>=4.1  # CoreML export
    # onnx>=1.9.0  # ONNX export
    # onnx-simplifier>=0.3.6  # ONNX simplifier
    # scikit-learn==0.19.2  # CoreML quantization
    # tensorflow>=2.4.1  # TFLite export
    # tensorflowjs>=3.9.0  # TF.js export

    # Extras --------------------------------------
    # albumentations>=1.0.3
    # Cython  # for pycocotools https://github.com/cocodataset/cocoapi/issues/172
    # pycocotools>=2.0  # COCO mAP
    # roboflow
    thop  # FLOPs computation
